--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,65 @@
 body {
 	margin: 0;
+	background-color: hsl(0, 0%, 95%);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, .5);
+	border: 1px solid black;
+	background-color: hsl(240, 10%, 50%);
+	border-radius: 4px;
+	margin: 10px;
+	padding: 10px;
+}
+
+.top-content {
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .oscilloscope {
-	margin: 10px 0 0 10px;
+	box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, .5);
+	border-radius: 4px;
+	height: 100px;
+}
+
+.editor {
+	box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, .5);
+	border-radius: 4px;
+	margin-left: 10px;
+	background-color: hsl(240, 30%, 80%);
+	overflow: hidden;
+}
+
+.top-bar {
+	display: flex;
 }
 
 .waveform {
-	margin: 10px 0 0 10px;
+	border-radius: 4px;
+}
+
+.osc {
+	display: flex;
+	justify-content: space-between;
+}
+
+.bottom-content {
+	margin-top: 10px;
 }
 
 .keyboard {
+	box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, .5);
+	border-radius: 4px;
+	background-color: hsl(240, 30%, 80%);
 	touch-action: none;
+	overflow: auto;
 }
 
 .key-row {
