--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,6 @@ body {
 
 .content {
 	display: flex;
-	flex-direction: column;
-	align-items: center;
 	box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, .5);
 	border: 1px solid black;
 	background-color: hsl(240, 10%, 50%);
@@ -22,9 +20,16 @@ body {
 	padding: 10px;
 }
 
-.top-content {
+.left-content {
 	display: flex;
-	flex-wrap: wrap;
+	flex-direction: column;
+	align-items: center;
+}
+
+.right-content {
+	display: flex;
+	align-items: flex-start;
+	margin-left: 10px;
 }
 
 .oscilloscope {
@@ -33,34 +38,10 @@ body {
 	height: 100px;
 }
 
-.editor {
-	box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, .5);
-	border-radius: 4px;
-	margin-left: 10px;
-	background-color: hsl(240, 30%, 80%);
-	overflow: hidden;
-}
-
-.top-bar {
-	display: flex;
-}
-
-.waveform {
-	border-radius: 4px;
-}
-
-.osc {
-	display: flex;
-	justify-content: space-between;
-}
-
-.bottom-content {
-	margin-top: 10px;
-}
-
 .keyboard {
 	box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, .5);
 	border-radius: 4px;
+	margin-top: 10px;
 	background-color: hsl(240, 30%, 80%);
 	touch-action: none;
 	overflow: auto;
@@ -111,7 +92,7 @@ body {
 	height: 40px;
 	background-color: black;
 	color: white;
-	transform: translateX(-10px);
+	transform: translateX(-50%);
 	z-index: 1;
 }
 
@@ -129,4 +110,55 @@ body {
 	top: 60%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+.editor {
+	box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, .5);
+	border-radius: 4px;
+	background-color: hsl(240, 30%, 80%);
+	overflow: hidden;
+}
+
+.top-bar {
+	display: flex;
+}
+
+.editor-content {
+	padding: 10px;
+}
+
+.waveform {
+	border-radius: 4px;
+}
+
+.gain-knob {
+	width: 100px;
+	height: 100px;
+	background-color: hsl(240, 10%, 70%);
+}
+
+.osc-row {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.column-title {
+	width: 60px;
+	margin: 5px;
+}
+
+.column-title:first-child {
+	width: 100px;
+}
+
+.osc-knob {
+	width: 50px;
+	height: 50px;
+	background-color: hsl(240, 10%, 70%);
+}
+
+.osc-knob-placeholder {
+	width: 50px;
+	height: 50px;
 }
