--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,6 +152,29 @@ body {
 	width: 100px;
 }
 
+.osc-roller {
+	border: 1px inset grey;
+	border-radius: 4px;
+	width: 80px;
+	height: 28px;
+	line-height: 26px;
+	background-color: white;
+	text-align: center;
+}
+
+.osc-roller:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	box-shadow:
+		0 2px 2px rgba(0, 0, 0, .1) inset,
+		0 -2px 2px rgba(0, 0, 0, .2) inset
+	;
+}
+
 .osc-knob {
 	width: 50px;
 	height: 50px;
